<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_header_reply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_header_reply"/>

    <TextView
        android:id="@+id/text_message_reply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="launchSecondActivity"
        android:text="@string/button_main"/>

    <EditText
        android:id="@+id/editText_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_main"/>

</LinearLayout>